--- a/open-dev/css/style.css
+++ b/open-dev/css/style.css
@@ -32,6 +32,7 @@ body {
     background-color: black;
     color: white;
     box-shadow: 0px, 0px, 0px, white;
+    font-size: 20px;
 }
 
 .text-editor button{
