--- a/open-dev/css/style.css
+++ b/open-dev/css/style.css
@@ -1,10 +1,12 @@
 body {
     background-color: rgb(51, 51, 51) !important;
+    background-image: none !important;
 }
 
 ::selection{
     background-color: white !important;
     color: black !important;
+    border-radius: 20px;
 }
 
 .text-editor{
@@ -24,12 +26,13 @@ body {
     to{padding-top: 10px; padding-bottom: 10px; width: 100%;}
 }
 
-.text-editor input{
+.text-editor textarea{
     animation-name: code !important;
     animation-duration: 1s !important;
     padding-top: 10px;
     padding-bottom: 10px;
     width: 100%;
+    height: 200px;
     padding-left: 10px !important;
     padding-top: 5px !important;
     border-radius: 5px !important;
