--- a/open-dev/css/style.css
+++ b/open-dev/css/style.css
@@ -58,14 +58,16 @@ body {
     height: 200px;
     padding-left: 10px !important;
     padding-top: 5px !important;
-    border-radius: 5px !important;
+    border-radius: 0px !important;
     box-shadow: 1px, 1px, 1px, gray !important;
-    border: none !important;
+    border-color: blueviolet !important;
+    border-width: 2px !important;
     outline: 0 !important;
     background-color: black !important;
     color: white !important;
     box-shadow: 0px, 0px, 0px, white !important;
     font-size: 20px !important;
+    font-family: arial !important;
 }
 
 .text-editor h2{
@@ -74,6 +76,7 @@ body {
     color: rgb(226, 226, 226) !important;
     padding-top: 30px;
     transition-duration: 1.5s;
+    font-family: arial !important;
 }
 
 .text-editor img{
@@ -83,8 +86,8 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 10px;
-    border: none;
-    outline: none;
+    border: none !important;
+    outline: none i !important;
     float: left;
     transition-duration: 1s;
 }
