--- a/open-dev/css/style.css
+++ b/open-dev/css/style.css
@@ -33,9 +33,8 @@ body {
 }
 
 .text-editor{
-    width: 40% !important;
+    width: 35% !important;
     height: 100% !important;
-    text-align: center !important;
     font-family: verdana !important;
 }
 
@@ -52,22 +51,15 @@ body {
 .editor{
     animation-name: code !important;
     animation-duration: 1s !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
     width: 100%;
     height: 200px;
-    padding-left: 10px !important;
-    padding-top: 5px !important;
-    border-radius: 0px !important;
-    box-shadow: 1px, 1px, 1px, gray !important;
+    padding-left: 0px !important;
+    padding-top: 0px !important;
+    border-radius: 2px !important;
+    box-shadow: 0px, 0px, 0px, gray !important;
     border-color: blueviolet !important;
     border-width: 2px !important;
     outline: 0 !important;
-    background-color: black !important;
-    color: white !important;
-    box-shadow: 0px, 0px, 0px, white !important;
-    font-size: 20px !important;
-    font-family: arial !important;
 }
 
 .text-editor h2{
@@ -77,6 +69,7 @@ body {
     padding-top: 30px;
     transition-duration: 1.5s;
     font-family: arial !important;
+    padding-left: 40%;
 }
 
 .text-editor img{
