--- a/BetterDiscordTheme.css
+++ b/BetterDiscordTheme.css
@@ -37,3 +37,7 @@
 .scrollerInner-2YIMLh a{
 	color: blue;
 }
+
+.banner-2QYc2d.popoutBanner-19WKGg{
+	background-image: url(http://3.bp.blogspot.com/-eaBzn5bq7Yg/WowkBcvbqJI/AAAAAAAAALQ/C8EPZOSTl-cka0w0PXfp9-4ct5GwoMWwwCK4BGAYYCw/s1600/3e3f9740b2e1ba4f8f8ad1cc9dbbd20e.gif);
+}
