--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ body{
     animation-duration: 1s;
     text-align: center;
     font-family: 'Staatliches', cursive;
-    font-size: 50px;
+    font-size: 300%;
 }
 
 .scroll-down{
 	display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 10%;
 }
 
 @keyframes myProjectsAnimation{
