--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
+/* The dev said welcome! */
+
 body{
 	padding-bottom: 50px;
+    background-color: #272727;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-@keyframes balloonsAnimation{
-    from{width: 0px; height: 0px;}
-    to{width: 225px; height: 225px;}
-}
-
-.balloons-image{
-    animation-name: balloonsAnimation;
-    animation-duration: 1.5s;
+.mainImage{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 225px;
+    height: 225px;
 }
 
-@keyframes welcomeAnimation{
-    from{font-size: 0px;}
-    to{font-size: 50px;}
+.scrollDownTextSpan{
+    text-align: center;
+    margin: auto;
+    display: block;
 }
 
 .welcome-div{
@@ -25,8 +26,6 @@ body{
 }
 
 .welcome{
-    animation-name: welcomeAnimation;
-    animation-duration: 1s;
     text-align: center;
     font-family: 'Staatliches', cursive;
     font-size: 300%;
@@ -39,17 +38,10 @@ body{
     width: 10%;
 }
 
-@keyframes myProjectsAnimation{
-    from{padding-left: 0%;}
-    to{padding-left: 15%;}
-}
-
 .title-my-projects{
-    animation-name: myProjectsAnimation;
-    animation-duration: 0.8s;
     padding-left: 15%;
     background: linear-gradient(90deg, rgba(166,76,184,1) 35%, rgba(0,212,255,1) 100%);
-    color: white;
+    color: #fff;
     padding: 10px;
     border-radius: 5px;
     font-family: arial;
@@ -62,7 +54,7 @@ body{
     border-style: dashed;
 	border-width: 3px;
     margin: auto;
-    color: white;
+    color: #fff;
     background-color: black;
     text-align: center;
     width: 50%;
@@ -91,6 +83,10 @@ body{
     font-size: 35px;
     background: linear-gradient(90deg, rgba(0,212,255,1) 35%, rgba(166,76,184,1) 100%);
     transition-duration: 0.5s;
+}
+.project button a{
+    text-decoration: none;
+    color: black;
 }
 .project img{
     transition-duration: 1s;
