--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
     color: #fff;
     background-color: black;
     text-align: center;
-    width: 50%;
+    width: 70%;
     font-family: arial;
     box-shadow: 1px, 1px, 1px, gray;
 	transition-duration: 1s;
@@ -96,5 +96,8 @@ body{
 }
 .project img:hover{
     transition-duration: 0.5s;
-    width: 85%;
+    width: 65%;
+}
+.project h2{
+    padding: 10px 40px;
 }
