--- a/open-dev/css/style.css
+++ b/open-dev/css/style.css
@@ -2,6 +2,7 @@ body, html {
     background-color: rgb(51, 51, 51);
     padding: 0;
     margin: 0;
+    color: #fff;
 }
 
 ::-webkit-scrollbar {
@@ -33,7 +34,7 @@ body, html {
 .text-editor{
     width: 45%;
     height: 100%;
-    font-family: verdana;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 @keyframes code2{
@@ -93,6 +94,7 @@ body, html {
 .head img:hover{
     width: 60px;
     height: 60px;
+    cursor: pointer;
     transition-duration: 0.5s;
 }
 
@@ -129,4 +131,16 @@ body, html {
 }
 #Selector{
     padding-left: 30px;
+}
+#configPanel{
+    padding: 20px;
+    width: 400px;
+    top: 50px;
+    left: 50px;
+    position: absolute;
+    background-color: rgb(31, 31, 51);
+    border-radius: 5px;
+}
+.hidden{
+    visibility: hidden;
 }
